--- a/elastalert_rules_yaml/elk_alert_ui_video_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_ui_video_adapter.yaml
@@ -1,7 +1,7 @@
 ## https://elastalert.readthedocs.io/en/latest/ruletypes.html#metric-aggregation
 
-run_every:
-  minutes: 10
+#run_every:
+#  minutes: 10
 
 
 #===========================================================
