--- a/elastalert_rules_yaml/k.yaml
+++ b/elastalert_rules_yaml/k.yaml
@@ -43,5 +43,19 @@ filter:
 # (Required)
 # The alert is use when a match is found
 alert:
-- "debug"
+  - "telegram"
+
+use_local_time: True
+
+## телеграм для релизов датаны (для примера взято)
+##      def final constTelegramReleaseURL = "https://api.telegram.org/bot1171367749:AAFgyOW0LGRLl9NHo9TkZIGNUdd6cFKYGqo/sendMessage?chat_id=-1001451379215&parse_mode=HTML"
+
+telegram_bot_token: 1171367749:AAFgyOW0LGRLl9NHo9TkZIGNUdd6cFKYGqo
+
+telegram_room_id: "@DatanaReleaseEvent"
+
+alert_text: "from elastalert - {0}, {1}, {2}, {3}"
+alert_text_args: ["hostname", "component", "message", "@timestamp"]
+### alert_text_type: alert_text_only
+
 
