NKR-818: ошибка была в том, время в сервере с тайм-зоной а моем ПО без зоны -- UTC формате (помогла дебаг питона)

--- a/elastalert_rules_yaml/elk_alert_new_video_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_new_video_adapter.yaml
@@ -1,12 +1,12 @@
+name: New Socket Adapter Of Datana Smart from 2020-10-23
+
 run_every:
   minutes: 10
 
 realert:
   hours: 1
 
-name: Socket Adapter Of Datana Smart
-
-index: datana-smart-dev-logs-*
+index: ${RULE_INDEX}
 ####index: datana-smart-test-logs-*
 # A rule that matches if num_events number of events occur within a timeframe
 num_events: 1
@@ -23,6 +23,10 @@ buffer_time:
 metric_agg_key: "data.model.sensors.status"
 #metric_agg_script:
 
+# https://github.com/Yelp/elastalert/issues/1010
+timestamp_field: "@timestamp"
+timestamp_type: unix_ms
+
 metric_agg_type: "sum"
 query_key: "@timestamp"
 doc_type: _doc
@@ -38,7 +42,7 @@ min_threshold: 30
 max_threshold: 100000
 
 
-writeback_index: dev_index_alert
+## writeback_index: dev_index_alert
 filter:
   - query:
       query_string:
@@ -50,15 +54,12 @@ alert:
 
 use_local_time: True
 
-## телеграм для релизов датаны (для примера взято)
-##      def final constTelegramReleaseURL = "https://api.telegram.org/bot1171367749:AAFgyOW0LGRLl9NHo9TkZIGNUdd6cFKYGqo/sendMessage?chat_id=-1001451379215&parse_mode=HTML"
+telegram_bot_token: ${RULE_TELEGRAM_BOT_TOKEN}
 
-telegram_bot_token: 1171367749:AAFgyOW0LGRLl9NHo9TkZIGNUdd6cFKYGqo
-
-telegram_room_id: "@DatanaReleaseEvent"
+telegram_room_id: "${RULE_TELEGRAM_ROOM_ID}"
 
 alert_text: "from elastalert - {0}, {1}, {2}, {3}"
-alert_text_args: ["hostname", "component", "message", "@timestamp"]
+alert_text_args: [ "hostname", "component", "message", "@timestamp" ]
 alert_text_type: alert_text_only
 
 
