NKR-818: причесывание кода

--- a/elastalert_rules_yaml/rule_new_video_adapter.yaml
+++ b/elastalert_rules_yaml/rule_new_video_adapter.yaml
@@ -58,7 +58,7 @@ telegram_bot_token: ${RULE_TELEGRAM_BOT_TOKEN}
 
 telegram_room_id: "${RULE_TELEGRAM_ROOM_ID}"
 
-alert_text: "from elastalert - {0}"
+alert_text: "сработал алерт - {0}"
 alert_text_args: [ "@timestamp" ]
 ##alert_text_args: [ "hostname", "component", "message", "@timestamp" ]
 alert_text_type: alert_text_only
