NKR-874: фикс правил

--- a/elastalert_rules_yaml/socker_alert_is_down.yaml
+++ b/elastalert_rules_yaml/socker_alert_is_down.yaml
@@ -1,4 +1,5 @@
-name: "Socket Temperature Is Down"
+name: "[Datana:Socket:V2] Server Down by temperature"
+###name: "Change of temperature"
 
 run_every:
   seconds: 1
@@ -8,45 +9,46 @@ realert:
 
 index: ${RULE_INDEX}
 # A rule that matches if num_events number of events occur within a timeframe
-num_events: 1
+num_events: 10
 
 ###################################
-type: metric_aggregation
+# Тишина в эфире (flatline) — когда меньше, чем X событий за Y времени.
+type: flatline
+
+
+## threshold: Минимальное количество событий, при которых предупреждение не должно срабатывать.
+threshold: 1
 
 timeframe:
-  seconds: 1
+  seconds: 10
 
 buffer_time:
-  seconds: 1
-
-metric_agg_key: "data.transportMessage.content.sensors.status"
-#metric_agg_script:
+  seconds: 10
 
 # https://github.com/Yelp/elastalert/issues/1010
 timestamp_field: "@timestamp"
-timestamp_type: unix_ms
+#### error elk --- ### timestamp_type: custom
+#### error elk --- ### timestamp_format: "%Y-%m-%d %H:%M:%S.%f%z"
+### 2020-10-28 14:43:46.543913+00:00 format elastelart
+##timestamp_type: unix
+timestamp_type: iso
 
-metric_agg_type: "value_count"
-query_key: component.keyword
+# (Required, change specific)
+# Ignore documents without the compare_key (country_name) field
+ignore_null: true
+
 doc_type: _doc
 
-bucket_interval:
-  seconds: 1
-
-sync_bucket_interval: true
-#allow_buffer_time_overlap: true
-#use_run_every_query_size: true
-
-min_threshold: 1000
-max_threshold: 10000000
-
-
-writeback_index: dev_index_alert
 filter:
-  - query:
-      query_string:
-        query: "data.transportMessage.content.sensors.status: 0"
-
+  - range:
+      data.transportMessage.content.sensors.data:
+        from: 0.1
+        to: 100000
+#
+#filter:
+#  - query:
+#      query_string:
+#        query: "data.transportMessage.content.sensors.data > 0"
 
 alert:
   - "telegram"
@@ -57,8 +59,8 @@ telegram_bot_token: ${RULE_TELEGRAM_BOT_TOKEN}
 
 telegram_room_id: "${RULE_TELEGRAM_ROOM_ID}"
 
-alert_text: "алерт сработал. Server is Down"
-alert_text_args: []
+alert_text: "[Версия 2]. Нет температуры за период (10 сек). Время (формат ISO без TimeZone) = {0}, Модуль (Тип приложения) = {1}, host = {2}"
+alert_text_args: ["@timestamp", "component", "HOSTNAME"]
 alert_text_type: alert_text_only
 
 
