--- a/elastalert_rules_yaml/socket_out_of_range_rule.yaml
+++ b/elastalert_rules_yaml/socket_out_of_range_rule.yaml
@@ -6,7 +6,7 @@ run_every:
 realert:
   minutes: 10
 
-index: datana-smart-dev-logs-*
+index: ${RULE_INDEX}
 # A rule that matches if num_events number of events occur within a timeframe
 num_events: 10
 
@@ -37,9 +37,9 @@ alert:
 
 use_local_time: True
 
-telegram_bot_token: 1171367749:AAFgyOW0LGRLl9NHo9TkZIGNUdd6cFKYGqo
+telegram_bot_token: ${RULE_TELEGRAM_BOT_TOKEN}
 
-telegram_room_id: "@DatanaReleaseEvent"
+telegram_room_id: "${RULE_TELEGRAM_ROOM_ID}"
 
 alert_text: "[Версия 3. Правило № 3, Type: Any (Частный случай правила)]. Socket adapter. Температура вне штатного диапазона 20..30 градусов. Время (формат ISO без TimeZone) = {0}, Модуль (Тип приложения) = {1}, host = {2}"
 alert_text_args: [ "@timestamp", "component", "HOSTNAME" ]
