--- a/elastalert_rules_yaml/socket_out_of_range_rule.yaml
+++ b/elastalert_rules_yaml/socket_out_of_range_rule.yaml
@@ -36,10 +36,11 @@ filter:
 
 alert:
   - telegram
-  - elastalert_modules.kafkaAlert.KafkaAlerter:
-      - kafka_brokers: "${KAFKA_BROKERS_HOST}"
-      - kafka_groupID: "${KAFKA_GROUP_ID}"
-      - kafka_topic: "${KAFKA_TOPIC}"
+  - elastalert_modules.kafkaAlert.KafkaAlerter
+
+kafka_brokers: "${KAFKA_BROKERS_HOST}"
+kafka_groupID: "${KAFKA_GROUP_ID}"
+kafka_topic: "${KAFKA_TOPIC}"
 
 
 
@@ -47,7 +48,6 @@ alert:
 use_local_time: True
 
 telegram_bot_token: ${RULE_TELEGRAM_BOT_TOKEN}
-
 telegram_room_id: "${RULE_TELEGRAM_ROOM_ID}"
 
 alert_text: "[Версия 4: Telegram + Kafka. Правило № 3, Type: Any (Частный случай правила)]. Socket adapter. Температура вне штатного диапазона 20..30 градусов. Время (формат ISO без TimeZone) = {0}, Модуль (Тип приложения) = {1}, host = {2}"
