--- a/elastalert_rules_yaml/socket_out_of_range_rule.yaml
+++ b/elastalert_rules_yaml/socket_out_of_range_rule.yaml
@@ -36,13 +36,16 @@ filter:
 
 alert:
   - telegram
-  - elastalert_modules.kafkaAlert.KafkaAlerter
+  - "elastalert_modules.kafkaAlert.KafkaAlerter"
+
+kafka_pub_location:
+kafka_ca_location:
+kafka_priv_location:
+kafka_priv_pass:
 
 kafka_brokers: "${KAFKA_BROKERS_HOST}"
 kafka_groupID: "${KAFKA_GROUP_ID}"
 kafka_topic: "${KAFKA_TOPIC}"
-
-
 
 
 use_local_time: True
