NKR-874: делаю кафку-плагин

--- a/elastalert_rules_yaml/socket_alert_is_up_rule.yaml
+++ b/elastalert_rules_yaml/socket_alert_is_up_rule.yaml
@@ -1,4 +1,4 @@
-name: "[Datana:Socket:Spike] Socket Temperature Is UP"
+name: "[Datana:Socket:Spike:V4] Socket Temperature Is UP"
 
 run_every:
   seconds: 1
