NKR-874: делаю кафку-плагин

--- a/elastalert_rules_yaml/socket_alert_is_up_rule.yaml
+++ b/elastalert_rules_yaml/socket_alert_is_up_rule.yaml
@@ -43,7 +43,7 @@ filter:
 
 alert:
   - telegram
-  - "elastalert_modules.kafkaAlert.KafkaAlerter"
+  - "opt.elastalert.elastalert_modules.kafkaAlert.KafkaAlerter"
 
 
 kafka_pub_location:
