--- a/elastalert_rules_yaml/socket_out_of_range_rule.yaml
+++ b/elastalert_rules_yaml/socket_out_of_range_rule.yaml
@@ -36,7 +36,7 @@ filter:
 
 alert:
   - telegram
-  - "elastalert_modules.kafkaAlert.KafkaAlerter"
+  - "opt.elastalert.elastalert_modules.kafkaAlert.KafkaAlerter"
 
 kafka_pub_location:
 kafka_ca_location:
