--- a/elastalert_rules_yaml/socker_alert_is_down_rule.yaml
+++ b/elastalert_rules_yaml/socker_alert_is_down_rule.yaml
@@ -42,7 +42,7 @@ filter:
 
 alert:
   - telegram
-  - "elastalert_modules.kafkaAlert.KafkaAlerter"
+  - "opt.elastalert.elastalert_modules.kafkaAlert.KafkaAlerter"
 
 kafka_pub_location:
 kafka_ca_location:
